syntax = "proto3";

package p2p.v1;

import "types/v1/artifact.proto";

message GetIngressMessageInBlockRequest {
  types.v1.IngressMessageId ingress_message_id = 1;
  types.v1.ConsensusMessageId block_proposal_id = 2;
}

message GetIngressMessageInBlockResponse {
  bytes ingress_message = 1;
}
